service.yml
apiVersion: v1
kind: Service
metadata:
  name: ollama-ui-service
spec:
  selector:
    app: ollama-ui
  ports:
  - port: 80
    targetPort: 8080
