ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ui
  labels:
    name: ollama-ui
spec:
  rules:
  - host: "ollama-ui.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ollama-ui-service
            port: 
              number: 80
